# TeXWASM-biber

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
crates/biber-cli/: Cargo.toml
crates/biber-cli/src/: main.rs
crates/biber-core/: Cargo.toml
crates/biber-core/src/: annotation.rs  collation.rs  config.rs  config_reader.rs  constants.rs  data_model.rs  datalist.rs  dates.rs  entry.rs  inheritance.rs  label_alpha.rs  langtag.rs  latex_recode.rs  lib.rs  name.rs  pipeline.rs  processor.rs  section.rs  sourcemap.rs  transliteration.rs  validate.rs  vendored.rs
crates/biber-core/tests/: dump_bbl.rs  full_bbl_parity.rs  parity.rs
crates/biber-input-bcf/: Cargo.toml
crates/biber-input-bcf/src/: lib.rs
crates/biber-input-bib/: Cargo.toml
crates/biber-input-bib/src/: lexer.rs  lib.rs
crates/biber-input-biblatexml/: Cargo.toml
crates/biber-input-biblatexml/src/: lib.rs
crates/biber-output-bbl/: Cargo.toml
crates/biber-output-bbl/src/: lib.rs
crates/biber-output-bblxml/: Cargo.toml
crates/biber-output-bblxml/src/: lib.rs
crates/biber-output-biblatexml/: Cargo.toml
crates/biber-output-biblatexml/src/: lib.rs
crates/biber-output-bibtex/: Cargo.toml
crates/biber-output-bibtex/src/: lib.rs
crates/biber-output-dot/: Cargo.toml
crates/biber-output-dot/src/: lib.rs
crates/biber-wasm/: Cargo.toml
crates/biber-wasm/src/: lib.rs
tests/fixtures/: README.md
