[package]
name = "biber-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core pipeline, data model, and processing passes for the biber port"

[features]
default = []
# Input readers are pulled in by the binary/wasm crate, not by core.
# Filesystem access (wasm32-wasi / native). Off for wasm32-unknown-unknown.
fs = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
roxmltree.workspace = true
regex = "1"
tracing.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
md-5 = "0.10"
hex = "0.4"
icu_collator = "2.2"
icu_locid = "1.5"
icu_provider = { version = "1.5", default-features = false, features = ["std"] }

[dev-dependencies]
biber-input-bcf.workspace = true
biber-input-bib.workspace = true
biber-output-bbl.workspace = true
