[package]
name = "biber-input-bcf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BCF (.bcf) control-file reader for the biber port"

[dependencies]
biber-core.workspace = true
anyhow.workspace = true
roxmltree.workspace = true
thiserror.workspace = true
tracing.workspace = true
