[package]
name = "biber-output-bbl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = ".bbl output writer for TeXWASM Biber"

[dependencies]
biber-core.workspace = true
anyhow.workspace = true
textwrap.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
