[package]
name = "biber-output-biblatexml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "biblatexml output writer for the biber port (deferred: tool-mode only)"

[dependencies]
biber-core.workspace = true
quick-xml.workspace = true
