[package]
name = "biber-output-bibtex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BibTeX output writer for the biber port (deferred: tool-mode only)"

[dependencies]
biber-core.workspace = true
