[package]
name = "biber-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM (browser) bindings for TeXWASM Biber"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biber-core.workspace = true
biber-input-bcf.workspace = true
biber-input-bib.workspace = true
biber-output-bbl.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
